2011-10-25  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBitmapImageRep.m:
	* Source/NSColor.m:
	* Source/GSThemeTools.m:
	* Source/NSGraphicsContext.m:
	* Headers/AppKit/NSColor.h:
	* Headers/AppKit/NSGraphicsContext.h:
	* ColorPickers/GSGrayColorPicker.m:
	* ColorPickers/GSCMYKColorPicker.m:
	* ColorPickers/GSWheelColorPicker.m:
	* ColorPickers/GSRGBColorPicker.m:
	* ColorPickers/GSHSBColorPicker.m: Migrate float to CGFloat in
	NSColor

2011-10-25 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSXibLoading.h,
	* Source/GSXibLoader.m: Integrate method used in Gorm.

2011-10-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBox.m (-initWithCoder:): Rearrange order of keyed
	decoding.
	* Source/GSNibLoading.m: Warn about missing custom resources.
	* Headers/Additions/GNUstepGUI/GSXibLoading.h: Add class IBToolTipAttribute.
	* Source/GSXibLoader.m: Add decoding of type "boolean". Fix
	decoding of "real", "integer" and "dictionary". Add handling of
	flattenedProperties to determine which windows should be visible.
	Store all top level obejcts in array.

2011-10-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSXibLoader.m (-objectForXib:): Add type "real" and
	handle empty strings.

2011-10-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSScrollView.m (-encodeWithCoder:, -initWithCoder:):
	Correct keyed encoding and decoding of flags. NIB files created
	from GNUstep will need to be recreated.
	Should fix bug #34498.

2011-10-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColor.m: Add alpha handling to keyed-coding/decoding.
	Should fix bug #34501.

2011-10-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m(currentVersion, -encodeWithCoder:,
	-initWithCoder:): Archive missing attributes in non-keyed
	mode. This required updating the NSTextView version to 4.
	Should fix bug #33884.

2011-10-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m (-lockFocusOnRepresentation:): Draw the